nambah page single produk

--- a/list-product.html
+++ b/list-product.html
@@ -580,6 +580,13 @@
                                                   <p class="price-text-color pull-right">Rp.100.000</p>
                                                   <div class="clearfix"></div>
                                               </div>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -607,6 +614,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -634,6 +648,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -661,6 +682,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -688,6 +716,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -715,6 +750,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -755,6 +797,13 @@
                                                   <p class="price-text-color pull-right">Rp.100.000</p>
                                                   <div class="clearfix"></div>
                                               </div>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -782,6 +831,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -809,6 +865,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -836,6 +899,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -863,6 +933,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -890,6 +967,13 @@
                                           <div class="product-old text-center">
                                               <p>Sample Product</p>
                                               <p class="price-text-color">Rp.100.000</p>
+                                              <div class="rating">
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                                <i class="fa fa-star" aria-hidden="true"></i>
+                                              </div>
                                           </div>
                                       </div>
                                       <div class="clearfix"></div>
@@ -898,8 +982,8 @@
                           </div>
                           <div class="clearfix"></div>
                      </div><!--END OF .LIST-ITEM-->
-                   </div>
-                 </div>
+                   </div><!--END OF .WR-BEST-PRODUCT-->
+                 </div><!--END OF .BEST-PRODUCT-->
                </div><!--END OF .RIGHT-->
                <div class="left col-md-2 col-sm-2 pull-left">
                    <div class="search">
