--- a/single-produk.html
+++ b/single-produk.html
@@ -547,10 +547,10 @@
                     <div class="image-produk col-md-3 col-sm-3">
                       <div class="tab-content tab-custom">
                         <div class="tab-pane pane-custom active" id="gambar1">
-                          <img src="images/icon-shop1.jpeg">
+                          <img src="images/icon-shop1.jpeg" class="img-responsive">
                         </div>
                         <div class="tab-pane pane-custom" id="gambar2">
-                          <img src="images/icon-shop2.jpeg">
+                          <img src="images/icon-shop2.jpeg" class="img-responsive">
                         </div>
                       </div><!--END OF .TAB-CUSTOM-->
                       <ul class="nav nav-pills nav-custom" id="tab" data-toggle="buttons-radio">
