nambah page history transaksi

--- a/index.html
+++ b/index.html
@@ -96,6 +96,27 @@
              </li>
              <li>
                <button type="button" class="btn btn-default dropdown-toggle dropdown" data-toggle="dropdown">
+                  <i class="fa fa-history" aria-hidden="true"></i> <span class="badge">1</span>
+               </button>
+               <ul class="dropdown-menu dropdown-transaksi">
+                  <li>
+                    <h4 class="capital heading">transaksi</h4>
+                  </li>
+                  <li>
+                    <a href="#" class="list-transaksi">
+                      <p class="capital">nama barang...</p>
+                      <small class="capital">12314234523534</small>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="show-more">
+                      <p class="capslock">show more</p>
+                    </a>
+                  </li>
+               </ul>
+             </li>
+             <li>
+               <button type="button" class="btn btn-default dropdown-toggle dropdown" data-toggle="dropdown">
                   <i class="fa fa-shopping-cart" aria-hidden="true"></i> <span class="badge">2</span>
                </button>
                <ul class="dropdown-menu dropdown-cart" role="menu">
@@ -209,7 +230,7 @@
       <div class="wr-header-fix container">
         <div class="logo">
           <a href="#">
-            <img src="images/idws-logo.png" class="img-responsive">
+            <img src="images/logo-idws.png" class="img-responsive">
           </a>
         </div><!--END OF .LOGO-->
         <div class="navigator">
@@ -394,7 +415,7 @@
         <div class="row">
           <div class="logo col-md-3 col-sm-3">
             <a href="#">
-              <img src="images/idws-logo.png" class="img-responsive">
+              <img src="images/logo-idws.png" class="img-responsive">
             </a>
           </div><!--END OF .LOGO-->
           <div class="menu col-md-9 col-sm-9">
